# experiment-monitoring

./: README.md  setup.cfg
docs/: arduino.md  requirements.txt  sensor.md  server_setup.md  server_setup_iogs.md
server_setup/: expmonitor.service
src/expmonitor/: config.py  downsample.py  exec.py
src/expmonitor/calibrations/: calib.py
src/expmonitor/classes/: arduino.py  arduino_AHT10.py  arduino_AHT20_BMP280.py  arduino_MAX31965.py  arduino_QMC5883L.py  arduino_adc.py  dummy.py  phidget_tc.py  phidget_vers_input.py  rigol_ds1104.py  sensor.py  sensor_UML.txt
src/expmonitor/classes/arduino_src/main/: main.ino
src/expmonitor/classes/arduino_src/test_ADC/: test_ADC.ino
src/expmonitor/classes/arduino_src/test_AHT10/: test_AHT10.ino
src/expmonitor/classes/arduino_src/test_AHT20_BMP280/: test_AHT20_BMP280.ino
src/expmonitor/classes/arduino_src/test_HMCL5883L/: test_HMCL5883L.ino
src/expmonitor/classes/arduino_src/test_max31865/: test_max31865.ino
src/expmonitor/classes/arduino_src/test_scan_libI2C/: test_scan_libI2C.ino
src/expmonitor/utilities/: database.py  db_spike_filter.py  exception_handler.py  spike_filter.py  utility.py
tests/: conftest.py  test_arduino.py  test_sensor.py
