[metadata]
name = expmonitor
version = 1.0
description = Automated monitoring of lab equipment via time series visualization and automatic e-mail alerts.
author = JP Bureik
license = GPL-3.0 
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages = 
    expmonitor
install_requires = 
    influxdb>=5
    numpy>=1
    Phidget22>1
    pyserial>3
    scipy>=1
    tqdm>=4
    pyvisa>=1.16
    pyvisa_py>=0.8
    python-vxi11>=0.9
python_requires = >=3.7
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest_cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
expmonitor = py.typed

[flake8]
max-line-length = 79
